@@ -99,6 +99,7 @@
 2017-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: version bump to 2.3-dev
+	* general: temporarily disabled code-coverage because of portability issues
 
 2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
